<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/main_menu_profile" />

    <item
        android:id="@+id/logout"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/main_menu_log_out" />

    <item
        android:id="@+id/allProducts"
        android:title="@string/menu_item_all_products"/>

    <item
        android:id="@+id/favorites"
        android:title="@string/menu_item_favorites"/>

    <item
        android:id="@+id/balance"
        app:showAsAction="always"
        android:visible="false"
        android:title="balance"/>


    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/menu_item_search"
        android:visible="false"/>
</menu>