<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_item_parent_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/layout_item_purchase_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/recycler_view_layout_left_margin"
            android:text="@string/purchase_history_date"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/layout_item_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/name_purchase_history_name"
                    android:textSize="14sp"
                    android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/layout_item_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/purchase_history_price"
            android:textColor="@color/colorBlue"
            android:textSize="14sp" />

    </LinearLayout>

    <View style="@style/VendingActivitySplitter" />

</LinearLayout>