<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/details_product_image"
            android:layout_width="0dp"
            android:layout_height="120dp"
            app:civ_border_width="1dp"
            app:civ_border_color="#FFFFFF"
            android:layout_centerInParent="true"
            android:src="@drawable/logo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:text="@string/dummy_text_view_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/details_product_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorTextSimple"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/buy_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/item_product_buy"
            android:textColor="@color/colorTextSimple"
            android:textSize="20sp"
            app:layout_constraintRight_toLeftOf="@+id/add_to_favorite"
            app:layout_constraintBottom_toBottomOf="@+id/add_to_favorite"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/add_to_favorite"
            android:layout_marginRight="16dp" />

        <ImageView
            android:id="@+id/add_to_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_favorite_border_white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coins"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/details_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/dummy_long_description"
                android:textSize="18sp" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>